2006-08-28  Kjartan Maraas  <kmaraas@gnome.org>

	* org-gnome-evolution-mail-attachments-import-ics.eplug.xml: Mark
	name and description for translation.

2006-08-23  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #347248
	
	* icsimporter.c: (get_menu_type), (import_ics): Update the
	em_utils_temp_save_part to use readwrite mode.

2006-02-21  Chenthill Palanisamy  <pchenthill@novell.com>

	reviewed by Veerapuram Varadhan	 <vvaradhan@novell.com>

	Fixes a crash
	* icsimporter.c: (org_gnome_evolution_import_ics_attachments):
	If the number of attachments selected is not equal to one, just return;
	

2006-01-22  Harish Krishnaswamy  <kharish@novell.com>

	* icsimporter.c (get_menu_type), (dialog_response_cb),
	 (dialog_close_cb), (get_icalcomponent_from_file):
	Fix twenty odd compiler warnings and style oddness.

2006-01-17  Harish Krishnaswamy  <kharish@novell.com>

	* import-ics-attachments : Initial commits. Plugin written and submitted by
	Johnny Jacob <johnnyjacob@gmail.com>
